tests/v0-fail/reject.out
Running <root>/reject.cli ...

printf "hello\n"
---
hello
---
ERROR: pattern reject at line <root>/reject.cli:5 rejected output line "hello"
[XX] missed *
  [OK]- matched "hello" (ignore)
  [XX] missed <eof> != "hello"
  [OK]- matched "hello" (ignore)

❌ FAIL

<root>/reject.cli FAILED
Error: pattern reject at line <root>/reject.cli:5 rejected output line "hello"

